--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,7 @@
     "node": true
   },
   "parser": "@typescript-eslint/parser",
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "plugin:react-hooks/recommended"],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "plugin:react-hooks/recommended", "next/core-web-vitals"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
@@ -18,13 +18,13 @@
       "error",
       {
         "groups": [
-          ["type"], // Type imports (TypeScript types)
-          ["builtin", "external"], // Built-in and external packages
-          ["internal", "parent", "sibling", "index"], // Internal imports
-          ["object", "unknown"] // Other imports (side-effect imports like CSS)
+          ["type"], 
+          ["builtin", "external"], 
+          ["internal", "parent", "sibling", "index"], 
+          ["object", "unknown"]
         ],
-        "newlines-between": "always", // Add new lines between groups
-        "alphabetize": { "order": "asc", "caseInsensitive": true } // Alphabetize within groups
+        "newlines-between": "always", 
+        "alphabetize": { "order": "asc", "caseInsensitive": true } 
       }
     ],
     "@typescript-eslint/no-explicit-any": 0,
