--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "prepare": "husky",
+    "prepare": "husky install",
     "format": "prettier --cache --write .",
     "lint": "eslint --cache ."
   },
   "dependencies": {
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "styled-components": "^6.1.13",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
@@ -23,10 +25,8 @@
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.13",
     "eslint-plugin-react": "^7.36.1",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
     "globals": "^15.9.0",
     "husky": "^9.1.6",
-    "prettier": "^3.3.3",
     "typescript": "^5",
     "typescript-eslint": "^8.7.0"
   }
