--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,12 @@
     "node": true
   },
   "parser": "@typescript-eslint/parser",
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "plugin:react-hooks/recommended", "next/core-web-vitals"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/recommended",
+    "plugin:react-hooks/recommended",
+    "next/core-web-vitals"
+  ],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
@@ -18,13 +23,13 @@
       "error",
       {
         "groups": [
-          ["type"], 
-          ["builtin", "external"], 
-          ["internal", "parent", "sibling", "index"], 
+          ["type"],
+          ["builtin", "external"],
+          ["internal", "parent", "sibling", "index"],
           ["object", "unknown"]
         ],
-        "newlines-between": "always", 
-        "alphabetize": { "order": "asc", "caseInsensitive": true } 
+        "newlines-between": "always",
+        "alphabetize": { "order": "asc", "caseInsensitive": true }
       }
     ],
     "@typescript-eslint/no-explicit-any": 0,
