--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-react": "^7.36.1",
     "globals": "^15.9.0",
     "husky": "^9.1.6",
+    "prettier": "^3.3.3",
     "typescript": "^5",
     "typescript-eslint": "^8.7.0"
   }
