--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,7 @@
   "compilerOptions": {
     "target": "es2022", // 최신 ECMAScript 버전
     "module": "esnext", // 최신 모듈 시스템
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ], // 브라우저와 ECMAScript 최신 기능 사용
+    "lib": ["dom", "dom.iterable", "esnext"], // 브라우저와 ECMAScript 최신 기능 사용
     "allowJs": true, // JS 파일도 사용할 수 있게 허용
     "skipLibCheck": true, // 라이브러리 타입 체크 생략 (컴파일 속도 향상)
     "strict": true, // 전체 엄격 모드 활성화
@@ -17,10 +13,7 @@
     "jsx": "preserve", // Next.js가 JSX 컴파일을 관리
     "esModuleInterop": true, // CommonJS와 ES6 모듈 호환성 유지
     "incremental": true, // 증분 컴파일을 통해 빌드 속도 향상
-    "types": [
-      "node",
-      "next"
-    ], // Next.js와 Node.js 환경을 위한 타입 지원
+    "types": ["node", "next"], // Next.js와 Node.js 환경을 위한 타입 지원
     "noEmit": true, // Next.js가 자체적으로 빌드를 처리하므로 TS에서 JS 출력하지 않음
     "useDefineForClassFields": true, // 최신 ECMAScript 클래스 필드 사용 방식
     "strictNullChecks": true, // null 및 undefined에 대한 엄격한 체크
@@ -33,18 +26,10 @@
     // 절대 경로 import를 위한 설정
     "baseUrl": ".", // 프로젝트의 루트 디렉토리
     "paths": {
-      "@components/*": [
-        "./components/*"
-      ],
-      "@lib/*": [
-        "./lib/*"
-      ],
-      "@utils/*": [
-        "./utils/*"
-      ],
-      "@hooks/*": [
-        "./hooks/*"
-      ]
+      "@components/*": ["./components/*"],
+      "@lib/*": ["./lib/*"],
+      "@utils/*": ["./utils/*"],
+      "@hooks/*": ["./hooks/*"]
     },
     "plugins": [
       {
@@ -52,15 +37,6 @@
       }
     ]
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    "next-env.d.ts",
-    ".next/types/**/*.ts"
-  ], // 프로젝트 전체 포함
-  "exclude": [
-    "node_modules",
-    ".next",
-    "out"
-  ] // 제외할 디렉토리
+  "include": ["**/*.ts", "**/*.tsx", "next-env.d.ts", ".next/types/**/*.ts"], // 프로젝트 전체 포함
+  "exclude": ["node_modules", ".next", "out"] // 제외할 디렉토리
 }
