🐛 Fix: Fixed eslint bug
and add auth component

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,8 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "plugin:react-hooks/recommended",
-    "next/core-web-vitals"
+    "next/core-web-vitals",
+    "plugin:prettier/recommended"
   ],
   "parserOptions": {
     "ecmaVersion": "latest",
@@ -19,20 +20,23 @@
   "plugins": ["react", "@typescript-eslint", "import"],
   "ignorePatterns": ["build/"],
   "rules": {
-    "import/order": [
-      "error",
-      {
-        "groups": [
-          ["type"],
-          ["builtin", "external"],
-          ["internal", "parent", "sibling", "index"],
-          ["object", "unknown"]
-        ],
-        "newlines-between": "always",
-        "alphabetize": { "order": "asc", "caseInsensitive": true }
-      }
+  "import/order": [
+  "error",
+  {
+    "groups": [
+      ["type"],
+      ["builtin"],    
+      ["external"],     
+      ["internal"],     
+      ["parent", "sibling", "index"], 
+      ["object", "unknown"]
     ],
-    "@typescript-eslint/no-explicit-any": 0,
+    "newlines-between": "always", 
+    "alphabetize": { "order": "asc", "caseInsensitive": true } 
+  }
+]
+,
+    "prettier/prettier": ["error", { "endOfLine": "auto" }],
     "semi": ["error", "always"],
     "quotes": ["error", "double"],
     "react/prop-types": "off",
