--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@vanilla-extract/css": "^1.9.3",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.13",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.36.1",
     "globals": "^15.9.0",
     "husky": "^9.1.6",
