--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "@vanilla-extract/next-plugin": "^2.4.6",
+    "@nextui-org/react": "^2.4.8",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/line-clamp": "^0.4.4",
+    "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.2",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
@@ -23,7 +27,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@vanilla-extract/css": "^1.9.3",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.1",
     "eslint-config-next": "14.2.13",
     "eslint-config-prettier": "^9.1.0",
@@ -33,7 +37,9 @@
     "globals": "^15.9.0",
     "husky": "^9.1.6",
     "jest": "^29.7.0",
+    "postcss": "^8.4.47",
     "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5",
     "typescript-eslint": "^8.7.0"
   }
