--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "next": "14.2.13",
+    "primereact": "^10.8.3",
     "react": "^18",
     "react-dom": "^18",
     "zustand": "^5.0.0-rc.2"
