--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
+    "html2pdf.js": "^0.10.2",
     "next": "14.2.13",
     "primereact": "^10.8.3",
     "react": "^18",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
+    "react-resizable-box": "^2.1.0",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
