--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.13",
     "typescript": "^5",
-    "typescript-eslint": "^8.7.0"
+    "typescript-eslint": "^8.7.0",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
