--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
     "react-resizable-box": "^2.1.0",
+    "tailwind-scrollbar": "^3.1.0",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
